Fix header on small screens

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -16,10 +16,20 @@ header .or {
 header h1 {
     display: flex;
     align-items: center;
-    font-size: 1.2em;
+    font-size: 1em;
+}
+
+header h1 span {
+    display: none;
 }
 
 header .logo {
     width: 5rem;
     object-fit: cover;
+}
+
+@media screen and (min-width: 420px) {
+    header h1 span {
+        display: inline;
+    }
 }
